test_data/end_to_end/err__main_must_not_be_unsafe/stderr.txt
error: `main` function must not be unsafe
  --> main.cz:1:1
1 | unsafe fn main() {
    ~~~~~~
